--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "antd": "4.3.4",
     "axios": "0.19.2",
     "axios-hooks": "1.10.0",
+    "moment": "2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "5.2.0",
